created my login and sigin

--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,7 @@ main a{
 
 /* Read More link */
 .actions a.read-more {
-  background-color: ##f0be95;
+  background-color: #f0be95;
   text-decoration: none;
   padding: 8px 12px;
   border-radius: 10px;
