--- a/css/login.css
+++ b/css/login.css
@@ -159,3 +159,32 @@ nav a:hover{
     color: #444;
     border-radius: 50%;
 }
+@media screen and (max-width: 428px) and (max-height: 926px){
+  header{
+    position: absolute;
+  }
+  nav{
+    display: none;
+  }
+  body {
+      font-size: 14px;
+  }
+  .container{
+    display: flex;
+    
+  }
+  .login{
+    display: block;
+  }
+  .content{
+    display: none;
+   
+  }
+  .loginForm{
+    width: 100%;
+    padding: 0;
+  }
+  .loginForm h1{
+    padding-top: 20px;
+  }
+}
