--- a/css/login.css
+++ b/css/login.css
@@ -74,6 +74,27 @@ nav a:hover{
     color: #444;
   
 }
+.sidebar{
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 200vh;
+  width: 250px;
+  z-index: 999;
+  background-color: rgba(251, 236, 224, 0.4);
+  backdrop-filter: blur(10px);
+  box-shadow: -10px 0 10px rgba(0,0, 0, 0.1);
+  display: none;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+.sidebar li{
+  width: 100%;
+}
+.hide{
+  display: none;
+}
 
 .container{
     /* background: #f2f2f2; */
@@ -159,13 +180,22 @@ nav a:hover{
     color: #444;
     border-radius: 50%;
 }
-@media screen and (max-width: 428px) and (max-height: 926px){
-  header{
-    position: absolute;
-  }
-  nav{
+@media(max-width: 800px){
+  .hideOnMobile{
     display: none;
   }
+  .hide{
+    display: block;
+  }
+}
+@media screen and (max-width: 428px) and (max-height: 926px){
+  .hideOnMobile{
+    display: none;
+  }
+  .hide{
+    display: block;
+  }
+ 
   body {
       font-size: 14px;
   }
@@ -178,7 +208,7 @@ nav a:hover{
   }
   .content{
     display: none;
-   
+ 
   }
   .loginForm{
     width: 100%;
