--- a/css/style.css
+++ b/css/style.css
@@ -54,13 +54,34 @@ nav  li {
 
 nav a {
   text-decoration: none;
-  color:#444;
+  color:#333;
   text-transform: capitalize;
   font-size: 14px;
 
 }
 nav a:hover{
   color: #ff6e00;
+}
+.sidebar{
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 200vh;
+  width: 250px;
+  z-index: 999;
+  background-color: rgba(251, 236, 224, 0.4);
+  backdrop-filter: blur(10px);
+  box-shadow: -10px 0 10px rgba(0,0, 0, 0.1);
+  display: none;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+.sidebar li{
+  width: 100%;
+}
+.hide{
+  display: none;
 }
 /*----------- main--------- */
 /* home */
@@ -422,16 +443,33 @@ main a{
   height: 70px;
   line-height: 30px;
 }
+.hide{
+  display: none;
+}
 
 
 /* Media queries for responsiveness */
+
+}
+@media(max-width: 800px){
+  .hideOnMobile{
+    display: none;
+  }
+  .hide{
+    display: block;
+  }
+}
 @media screen and (max-width: 768px) {
+  .hideOnMobile{
+    display: none;
+  }
+  .hide{
+    display: block;
+  }
   header{
     position: absolute;
   }
-  nav{
-    display: none;
-  }
+  
   .home {
     flex-direction: column;
     align-items: center;
@@ -454,12 +492,16 @@ main a{
 
 /* Additional media queries for even smaller devices if needed */
 @media screen and (max-width: 480px)and (max-width: 428px) and (max-height: 926px){
+  .hideOnMobile{
+    display: none;
+  }
+  .hide{
+    display: block;
+  }
   header{
     position: absolute;
   }
-  nav{
-    display: none;
-  }
+ 
   body {
       font-size: 14px;
       flex-wrap: wrap;
