--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -37,15 +37,16 @@
 
 .side-header {
     box-shadow: 0px 5px 5px -5px rgb(0 0 0 /10%);
-    background: var(--main-color);
+    /* background: var(--main-color); */
     height: 60px;
     display: flex;
+
     justify-content: center;
     align-items: center;
 }
 
 .side-header h3, side-head span {
-    color: #fff;
+    color: #000;
     font-weight: 400;
 }
 
@@ -97,7 +98,7 @@
 }
 
 .profile h4 {
-    color: #fff;
+    color: #444;
     font-weight: 500;
 }
 
@@ -120,7 +121,7 @@
 }
 
 .side-menu a.active {
-    background: #f8efe1;
+    background: #ffc76d;
 }
 
 .side-menu a.active span, .side-menu a.active small {
